Attempt to fix box shadow on ios mobile

--- a/src/Main.module.css
+++ b/src/Main.module.css
@@ -51,15 +51,6 @@
   width: 180px;
 }
 
-.link {
-  text-decoration: none;
-  border: none;
-  text-align: left;
-  color: #ec8bbb;
-  margin-right: 30px;
-  margin-bottom: 20px;
-}
-
 .experience {
   display: flex;
   flex-direction: column;
@@ -79,10 +70,16 @@
   width: 300px;
   height: 230px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1);
+  color: #ec8bbb;
+  margin-right: 30px;
+  margin-bottom: 20px;
   transition: 0.3s;
   border-radius: 5px;
   overflow: hidden;
   font-size: 13px;
+  text-decoration: none;
+  border: none;
+  text-align: left;
 }
 
 .card:hover {
